--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,10 +2,11 @@
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-  <title>kzak</title>
+  <title>KZAK!</title>
   <%= stylesheet_link_tag 'reset', 'application' %>
 </head>
 <body>
+  <h1><%= link_to 'KZAK!', root_path %>
   <%= yield %>
 </body>
 </html>
