--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,8 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <title>KZAK!</title>
   <%= stylesheet_link_tag 'reset', 'application' %>
+  <script type="text/javascript" src="/javascripts/audio-player.js"></script>  
+  <script type="text/javascript">AudioPlayer.setup("/flash/player.swf", {width: 290});</script>
 </head>
 <body>
   <h1><%= link_to 'KZAK!', root_path %>
