fix up mp3 info extraction

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,7 +13,7 @@
       <b><%= link_to h(post.user), post.user %></b>
       <p id="post-<%= post.id %>"><%=h post.title %></p>  
       <script type="text/javascript">AudioPlayer.embed('<%= "post-#{post.id}" %>', {soundFile:'<%= post.attachment.url %>'});</script>  
-      <%=h post.title %> | <%=h post.artist %> | <%=h post.album %> | <%=h post.length %>
+      <%=h post.title %> | <%=h post.artist %> | <%=h post.album %>
     </li>
   <% end if @posts %>
 </ul>
