--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,25 +3,11 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <title>KZAK!</title>
-  <%= stylesheet_link_tag 'reset', 'application', :cache => true %>
-  <%= javascript_include_tag :all, :cache => true  %>
-  <script>
-    $(document).ready( function(){    
-  
-      soundManager.debugMode = false;
-      soundManager.url = '/flash/';
-  
-      $('a.audio').click( function() {
-        var href = $(this).attr('href');
-        try { soundManager.play(href, href); } catch(err) { return true; }
-        return false;
-      });
-  
-    });
-  </script>
+  <%= stylesheet_link_tag 'reset', 'application', 'sm-page-player', :cache => true %>
+  <%= javascript_include_tag 'jquery.min', 'sm.min', 'sm-page-player', :cache => true  %>
 </head>
 <body>
-  <h1><%= link_to 'KZAK!', root_path %>
-  <%= yield %>
+  <h1><%= link_to 'KZAK!', root_path %></h1>
+  <%= yield %>  
 </body>
 </html>
