--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,25 +2,45 @@
   <%= f.error_messages %>
   <p><%= f.file_field :attachment %></p>
   <p>...or upload via URL: <%= f.text_field :attachment_url, :class => 'text' %></p>
-  <p><%= f.submit 'Post' %></p>
+  <p><%= f.submit 'Upload', :disable_with => 'Uploading...' %></p>
 <% end %>
 
-<h2>Posts</h2>
-
-<ul>
+<ul class="playlist">
   <% @posts.each do |post| %>
     <li>
-      <%= link_to h(post.user), post.user %> &nbsp; 
-      <%= link_to post.title, post.attachment.url, :class => 'audio' %> &nbsp; 
-      <%=h post.artist %> &nbsp; 
-      <%=h post.album %>
+      <a href="<%= post.attachment.url %>">
+        <span><%= h(post.title) %></span>
+        <%=h post.artist %> &nbsp;|&nbsp; <%=h post.album %>
+      </a>
     </li>
   <% end if @posts %>
 </ul>
 
-<h2>Users</h2>
+<div id="control-template">
+ <!-- control markup inserted dynamically after each link -->
+ <div class="controls">
+  <div class="statusbar">
+   <div class="loading"></div>
+    <div class="position"></div>
+  </div>
+ </div>
+ <div class="timing">
+  <div id="sm2_timing" class="timing-data">
+   <span class="sm2_position">%s1</span> / <span class="sm2_total">%s2</span></div>
+ </div>
+ <div class="peak">
+  <div class="peak-box"><span class="l"></span><span class="r"></span>
+  </div>
+ </div>
+</div>
 
-<ul>
+<div id="spectrum-container" class="spectrum-container">
+ <div class="spectrum-box">
+  <div class="spectrum"></div>
+ </div>
+</div> 
+
+<ul class="users">
   <% @users.each do |user| %>
     <li><b><%= link_to h(user), user %></b></li>
   <% end if @users %>
