--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -6,3 +6,5 @@ h1 a { color: #111; }
 h2 { font-size: 16px; margin: 1em 0; }
 p { margin: 1em 0; }
 #nav {float:right;}
+ul.users { margin-top: 20px; }
+ul.playlist { margin-top: 10px !important; }
