--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= javascript_include_tag 'jquery.min', 'sm.min', 'sm-page-player', :cache => true  %>
 </head>
 <body>
+  <%= image_tag('bplayer2.gif', :class => 'bplayer2') %>
   <h1><%= link_to 'KZAK!', root_path %></h1>
   <%= yield %>  
 </body>
