--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,9 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <title>KZAK!</title>
-  <%= stylesheet_link_tag 'reset', 'application', 'sm-page-player', 'swfupload', :cache => true %>
-  <%= javascript_include_tag 'jquery.min', 'sm.min', 'sm-page-player', 'swfupload', 'swfupload_handlers', :cache => true  %>	
+  <%= stylesheet_link_tag 'reset', 'application', 'soundmanager.player', 'swfupload', :cache => true %>
+  <%= javascript_include_tag 'application', 'jquery', 'soundmanager', 'soundmanager.player', 'swfupload', 'jquery.swfupload', :cache => true  %>
+  <%= yield :head %>
 </head>
 <body>
   <%= image_tag('bplayer2.gif', :class => 'bplayer2') %>
