--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <title>KZAK!</title>
-  <%= stylesheet_link_tag 'reset', 'application', 'soundmanager.player', 'swfupload', :cache => true %>
+  <%= stylesheet_link_tag 'reset', 'application', 'soundmanager.player', :cache => true %>
   <%= javascript_include_tag 'application', 'jquery', 'soundmanager', 'soundmanager.player', 'swfupload', 'jquery.swfupload', :cache => true  %>
   <%= yield :head %>
 </head>
