fiddling with soundmanager hooks

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,7 +4,7 @@
 
 <ul id="swfupload-playlist" class="playlist">
   <% @posts.each do |post| %>
-    <li><%= render post %></li>
+    <li id="" class=""><%= render post %></li>
   <% end if @posts %>
 </ul>
 
