--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,4 +1,4 @@
-<a href="<%= post.attachment.url %>">
+<a class="sm2_link" href="<%= post.attachment.url %>">
   <span><%= h(post.title) %></span>
   <%=h post.artist %> &nbsp;|&nbsp; <%=h post.album %>
 </a>
