--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,15 +3,15 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <title>KZAK!</title>
-  <%= stylesheet_link_tag 'reset', 'application', 'jquery.soundmanager', :cache => true %>
-  <%= javascript_include_tag 'application', 'jquery', 'jquery.livequery', 'soundmanager', 'jquery.soundmanager', 'swfupload', 'jquery.swfupload', :cache => true  %>
+  <%= stylesheet_link_tag 'reset', 'application', 'soundmanager', :cache => true %>
+  <%= javascript_include_tag 'application', 'jquery', 'soundmanager', 'jquery.soundmanager', 'swfupload', 'jquery.swfupload', :cache => true  %>
   <%= yield :head %>
   <script type="text/javascript" charset="utf-8">
     $(document).ready(function(){
       $.playable('flash/',{pauseSkip : false, useUi : true});
       $('ul.playlist').playable();
       // $.playable('flash/',{pauseSkip : false, useUi : true});
-      // $('ul.playlist').livequery(function(){ $(this).playable(); });
+      // $('ul.playlist').live(function(){ $(this).playable(); });
     });
   </script>
 </head>
