--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <title>KZAK!</title>
   <%= stylesheet_link_tag 'reset', 'application', 'jquery.playable', :cache => true %>
-  <%= javascript_include_tag 'application', 'jquery', 'soundmanager', 'jquery.playable', 'jquery.playable.ui.simple', 'swfupload', :cache => true  %>
+  <%= javascript_include_tag 'application', 'jquery', 'soundmanager', 'jquery.playable', 'jquery.playable.ui.simple', 'swfupload', 'jquery.swfupload', :cache => true  %>
   <%= yield :head %>
   <script type="text/javascript" charset="utf-8">
     $(document).ready(function(){
