undo playable call on doc ready

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <script type="text/javascript" charset="utf-8">
     $(document).ready(function(){
       $.playable('flash/');
-      $('a[href$=.mp3]').playable();
+      // $('a[href$=.mp3]').playable();
     });
   </script>
 </head>
