--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <%= yield :head %>
   <script type="text/javascript" charset="utf-8">
     $(document).ready(function(){
-      $.playable('flash/', {pauseOnly: false});
+      $.playable('flash/');
       $('#swfupload-playlist').playable();
     });
   </script>
