--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
   </script>
 </head>
 <body>
+  <%= render 'shared/status' %>
   <h1><%= link_to 'KZAK!', root_path %></h1>
   <%= render 'shared/flash' %>
   <%= yield %>
