--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -3,11 +3,11 @@ a { color: #24a; text-decoration: none; }
 a:hover { text-decoration: underline; }
 h1 { font-size: 30px; margin-bottom:10px;}
 h1 a { color: #111; }
+h2 { border-top: 1px solid #dedede; border-bottom: 1px solid #dedede; padding:5px 0; margin-bottom:5px;}
 p { margin: 1em 0; }
-#nav {float:right;}
 #status {float:right;}
-ul.users { margin-top: 20px; }
-ul.playlist { margin-top: 10px !important; }
+#users { text-align:right;}
 #footer {text-align:center; margin-top:120px;}
+#swfupload-control {margin-top:10px;}
 #swfupload-playlist li .progressbar { margin-top: 2px; border:1px solid #666; height:5px; background:#fff; }
 #swfupload-playlist li .progress { background:#999; width:0%; height:5px; }
