--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
       <h1><%= link_to 'KZAK!', root_path %></h1>
   	</div>
   	<div class="grid_6">
-      <%= render 'shared/status' %>
+      <%= render 'shared/nav' %>
   	</div>
   	<div class="grid_12">
       <%= render 'shared/flash' %>
