fix up users/show, dont show users feed, playable() playlist

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <script type="text/javascript" charset="utf-8">
     $(document).ready(function(){
       $.playable('/flash/');
-      $('#swfupload-playlist').playable();
+      $('.playlist').playable();
     });
   </script>
 </head>
