--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -12,3 +12,6 @@ p { margin: 1em 0; }
 #swfupload-control {margin-top:10px;}
 #swfupload-playlist li .progressbar { margin-top: 2px; border:1px solid #666; height:5px; background:#fff; }
 #swfupload-playlist li .progress { background:#999; width:0%; height:5px; }
+.playable {background:#efefef;}
+.playing {background:#ccc;}
+.paused {background:#ddd;}
