--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -28,7 +28,7 @@
   
   <ul class="users">
     <% @users.each do |user| %>
-      <li><b><%= link_to h(user), user %></b></li>
+      <li><%= render user %></li>
     <% end if @users %>
   </ul>
 
