--- a/app/views/posts/_uploader.html.erb
+++ b/app/views/posts/_uploader.html.erb
@@ -1,7 +1,7 @@
 <script type="text/javascript">
   $(function(){
   	$('#swfupload-control').swfupload({
-      upload_url : '<%= new_post_path_for_swf_upload %>',
+      upload_url : '<%= posts_path %>',
       flash_url : '/flash/swfupload.swf',
       file_size_limit : '100000',
       file_types : '*.mp3',
@@ -11,6 +11,7 @@
   		button_width: "64",
   		button_height: "27",
   		button_placeholder_id: "swfupload-button",
+  		post_params: {"authenticity_token" : '<%= form_authenticity_token %>'},
   		debug: false
   	})
     	.bind('fileQueued', function(event, file){
