--- a/app/views/posts/_uploader.html.erb
+++ b/app/views/posts/_uploader.html.erb
@@ -7,11 +7,14 @@
       file_types : '*.mp3',
       file_types_description : 'mp3s',
       file_upload_limit : '0',
-  		button_image_url: "/images/upload.png",
-  		button_width: "64",
-  		button_height: "27",
-  		button_placeholder_id: "swfupload-button",
-  		post_params: {"authenticity_token" : '<%= form_authenticity_token %>'},
+  		button_image_url: '/images/upload.png',
+  		button_width: '64',
+  		button_height: '27',
+  		button_placeholder_id: 'swfupload-button',
+  		post_params: {
+  		  '<%= ActionController::Base.session_options[:key] %>' : '<%= cookies[ActionController::Base.session_options[:key]] %>',
+  		  'authenticity_token' : '<%= form_authenticity_token %>'
+  		},
   		debug: false
   	})
     	.bind('fileQueued', function(event, file){
