--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,23 +19,7 @@
       $('a[href$=.mp3]').each(function(){
         $(this).makePlayable();
       });
-      
-      $('.playable').click(function(e){
-        e.preventDefault();
-        // $(this).togglePlayState();
-        // return false;
-        
-        if ($(this).hasClass('playing')) {
-          $(this).removeClass('playing');
-          $(this).addClass('paused');
-          sm.pause(this.id);
-        } else {
-          $(this).removeClass('paused');
-          $(this).addClass('playing');
-          sm.play(this.id);
-        }
-      });
-            
+                  
       // jQuery.fn.extend({
       // 
       //   togglePlayState:function() { 
@@ -59,6 +43,24 @@
     $.fn.makePlayable = function() { 
       $(this).addClass('playable');
       sm.createSound($(this)[0].id, $(this)[0].href);
+      
+      $(this).click(function(e){
+        e.preventDefault();
+        // $(this).togglePlayState();
+        // return false;
+        
+        if ($(this).hasClass('playing')) {
+          $(this).removeClass('playing');
+          $(this).addClass('paused');
+          sm.pause(this.id);
+        } else {
+          $(this).removeClass('paused');
+          $(this).addClass('playing');
+          sm.play(this.id);
+        }
+      });
+      
+      
     }
     
   </script>
