--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,3 +1,3 @@
 <a id="<%= "post-#{post.id}" %>" href="<%= post.attachment.url %>">
-  <%= h(post.title) %> &mdash; <%=h post.artist %> &mdash; <%=h post.album %>
+  <span class="mp3"><%= h(post.title) %> &mdash; <%=h post.artist %> &mdash; <%=h post.album %></span>
 </a>
