--- a/app/views/posts/_uploader.html.erb
+++ b/app/views/posts/_uploader.html.erb
@@ -34,7 +34,7 @@
     	})
     	.bind('uploadSuccess', function(event, file, serverData){
     		$('#swfupload-playlist li#'+file.id).html($(serverData).fadeIn(1000));
-    		$('#swfupload-playlist li#'+file.id+'a[href$=.mp3]').each(function(){
+    		$('#swfupload-playlist li#'+file.id+' a').each(function(){
           $(this).makePlayable();
         });
     	})
